--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -41,6 +41,8 @@ services:
     container_name: sql_admin
     image: phpmyadmin:5.2.0-apache
     restart: always
+    networks:
+      - paragon_net
     depends_on:
       - db  
   
@@ -50,6 +52,11 @@ services:
     ports:
       - 80:80
       # - 443:443
+    networks:
+      - paragon_net
     volumes:
       # - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/logs:/var/log/nginx
+networks:
+  paragon-net:
+   driver: bridge
