--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -58,5 +58,5 @@ services:
       # - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/logs:/var/log/nginx
 networks:
-  paragon-net:
+  paragon_net:
    driver: bridge
