--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 PORT=3030
+MYSQL_DATABASE=paragon
+MYSQL_ROOT_PASSWORD=root
+MYSQL_USER=admin
+MYSQL_PASSWORD=paragon99
+SERVICE_TAG=dev
+SERVICE_NAME=paragon_db
