--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,10 @@
 version: "3"
+volumes:
+  mysql-data:
+
 services:
   node-app:
+    container_name: paragon_node
     build: 
       context: .
       args:
@@ -10,6 +14,8 @@ services:
     command: npm run dev
     networks:
       - paragon_net
+    # ports:
+      # - "3030:3030"
     volumes:
       - ./:/app:ro
       - /app/node_modules
@@ -50,7 +56,7 @@ services:
     container_name: nginx
     image: nginx:1.22-alpine
     ports:
-      - 80:80
+      - 8080:80
       # - 443:443
     networks:
       - paragon_net
@@ -59,4 +65,4 @@ services:
       - ./nginx/logs:/var/log/nginx
 networks:
   paragon_net:
-   driver: bridge
+    driver: bridge
