--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,7 +3,7 @@ server {
         listen [::]:80;
 
         root /var/www/html;
-        index index.html index.htm index.nginx-debian.html;
+        index index.html index.htm index.nginx-debian.html index.ejs;
 
         server_name 3.11.230.233;
 
