--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,11 +11,11 @@ server {
                 proxy_pass http://node-app:3030;
         }
 
-				location /database {
-								proxy_pass http://db:3306;
-				}
-				location /phpmyadmin {
-								proxy_pass http://phpmyadmin:8888
-				}
+				# location /database {
+				# 				proxy_pass http://db:3306;
+				# }
+				# location /phpmyadmin {
+				# 				proxy_pass http://phpmyadmin:8888
+				# }
 
 }
