attempting to set correct upstream

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,12 +3,14 @@ server {
         listen [::]:80;
 
         root /var/www/html;
-        index index.html index.htm index.nginx-debian.html index.ejs;
+        index index.html index.htm index.nginx-debian.html;
 
         server_name 3.11.230.233;
 
         location / {
-                proxy_pass http://node-app:3030;
+								set $upstream_node-app http://node-app:3030;
+                proxy_pass $upstream_node-app;	
+								
         }
 
 				# location /database {
