--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,6 @@ services:
       image: nginx:stable-alpine
       ports:
         - 80:80
-        # - 443:443
       restart: unless-stopped
       networks:
         - app-network
@@ -28,7 +27,7 @@ services:
       volumes:
         - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
         - ./nginx/logs:/var/log/nginx
-        - web-root:/var/www/html
+        # - web-root:/var/www/html
 
   db:
     container_name: paragon_db
