--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,23 +1,30 @@
-server {
-        listen 80;
-        listen [::]:80;
-
-        root /var/www/html;
-        index index.html index.htm index.nginx-debian.html;
-
-        server_name 3.11.230.233;
-
-        location / {
-								set $upstream_node-app http://node-app:3030;
-                proxy_pass $upstream_node-app;	
-								
-        }
-
-				# location /database {
-				# 				proxy_pass http://db:3306;
-				# }
-				# location /phpmyadmin {
-				# 				proxy_pass http://phpmyadmin:8888
-				# }
-
+events {
+  worker_connections  4096;  ## Default: 1024
 }
+http {
+
+		server {
+						listen 80;
+						listen [::]:80;
+
+						root /var/www/html;
+						index index.html index.htm index.nginx-debian.html;
+
+						server_name 3.11.230.233;
+
+						location / {
+										set $upstream_node-app http://node-app:3030;
+										proxy_pass $upstream_node-app;	
+										
+						}
+
+						# location /database {
+						# 				proxy_pass http://db:3306;
+						# }
+						# location /phpmyadmin {
+						# 				proxy_pass http://phpmyadmin:8888
+						# }
+		}
+}
+
+
