--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -13,8 +13,8 @@ http {
 						server_name 3.11.230.233;
 
 						location / {
-										set $upstream_node-app http://node-app:3030;
-										proxy_pass $upstream_node-app;	
+										set $upstream_nodeapp http://node-app:3030;
+										proxy_pass $upstream_nodeapp;	
 										resolver 127.0.0.11 ipv6=off;	
 
 						}
